--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <input type="text" name="nome" id="nome"> <br><br>
     Sobrenome: <br>
     <input type="text" name="sobrenome" id="sobrenome"> <br><br>
+
+    Senha: <br>
+    <input type="password" name="senha" id="senha"> <br><br>
+
     <input type="subimit" value="Salvar">
     </form>
    
